name:                blog
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              vaporweb
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable blog
  ghc-options:         -threaded
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.10 && < 4.11
                     , hakyll >= 4.11.0 && < 4.12
  -- hs-source-dirs:
  default-language:    Haskell2010
